[workspace]
members = [
    "rrt",
    "vec_array",
    "kd_tree",
    "rtree",
]

exclude = ["visualization"]

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 1
# This is needed to reduce memory usage during compilation, or CI will fail
codegen-units = 1

[profile.bench]
# Necessary to generate flamegraphs
debug = true
codegen-units = 1
lto = "fat"

[profile.release]
# Necessary to generate flamegraphs
debug = true
codegen-units = 1
lto = "fat"