[workspace]
members = [
    "rrt",
    "vec_array",
    "kd_tree",
    "rtree",
]

exclude = ["visualization"]

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 1

[profile.bench]
# Necessary to generate flamegraphs
debug = true

[profile.release]
# Necessary to generate flamegraphs
debug = true