[package]
name = "kd_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "^0.29", features = ["rand"] }
ptree = { version = "^0.3.2", optional = true }

[features]
display = [ "ptree" ]
