[package]
name = "rrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "^0.29", features = ["rand"] }
itertools = "0.10"
rand = "0.8.4"
ptree = "0.3.2"

[dev-dependencies]
plotters = "0.3.1"