[package]
name = "rrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kd_tree = { path = "../kd_tree" }
vec_array = { path = "../vec_array" }
nalgebra = { version = "^0.29", features = ["rand"] }
itertools = "0.10"
rand = "0.8.4"

[dev-dependencies]
plotters = "0.3.1"
criterion = "0.3"

[features]
multithreaded = []

[[bench]]
name = "rrt_star"
harness = false

[[bench]]
name = "rrt_star_simple"
harness = false

[[bench]]
name = "rrt_star_connect"
harness = false